--- a/.github/workflows/bless.yml
+++ b/.github/workflows/bless.yml
@@ -12,27 +12,31 @@ jobs:
   graph_conn:
     name: Build and test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        elixir: ['1.9.4', '1.10.4', '1.11.0']
+        erlang: ['22.3', '23.1']
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
       uses: actions/setup-elixir@v1
       with:
-        elixir-version: '1.11.0' # Define the elixir version [required]
-        otp-version: '23.1' # Define the OTP version [required]
+        elixir-version: ${{ matrix.elixir }}
+        otp-version: ${{ matrix.erlang }}
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
         path: deps
-        key: ${{ runner.os }}-deps-${{ hashFiles('mix.lock') }}
-        restore-keys: ${{ runner.os }}-deps-
+        key: ${{ runner.os }}-deps-${{ matrix.elixir }}-${{ matrix.erlang }}-${{ hashFiles('mix.lock') }}
+        restore-keys: ${{ runner.os }}-deps-${{ matrix.elixir }}-${{ matrix.erlang }}-
     - name: Install dependencies
       run: mix deps.get
     - name: Restore builds cache
       uses: actions/cache@v2
       with:
         path: _build/test
-        key: ${{ runner.os }}-build_test--${{ hashFiles('mix.lock') }}
-        restore-keys: ${{ runner.os }}-build_test-
+        key: ${{ runner.os }}-build_test-${{ matrix.elixir }}-${{ matrix.erlang }}-${{ hashFiles('mix.lock') }}
+        restore-keys: ${{ runner.os }}-build_test-${{ matrix.elixir }}-${{ matrix.erlang }}-
     - name: Bless
       run: mix bless
