--- a/.github/workflows/bless.yml
+++ b/.github/workflows/bless.yml
@@ -14,13 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        elixir: ['1.9.4', '1.10.4', '1.11.0']
-        erlang: ['22.3', '23.1']
+        elixir: ['1.9.4', '1.10.4', '1.11.4']
+        erlang: ['22.3', '23.3', '24.0']
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: erlef/setup-elixir@v1
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: ${{ matrix.elixir }}
         otp-version: ${{ matrix.erlang }}
