--- a/.github/workflows/bless.yml
+++ b/.github/workflows/bless.yml
@@ -12,6 +12,8 @@ jobs:
   graph_conn:
     name: Build and test
     runs-on: ubuntu-latest
+    env:
+      ImageOS: ubuntu20
     strategy:
       matrix:
         elixir: ['1.9.4', '1.10.4', '1.11.4']
@@ -20,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: erlef/setup-beam@v1
+      uses: erlef/setup-beam@v1.9.0
       with:
         elixir-version: ${{ matrix.elixir }}
         otp-version: ${{ matrix.erlang }}
